--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "atomic-bomb-engine"
-version = "0.23.2"
+version = "0.24.0"
 edition = "2021"
 description = "A high performance torture testing engine"
 license = "MIT"
@@ -11,7 +11,7 @@ name = "atomic_bomb_engine"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.12.1", features = ["json", "stream", "cookies"] }
+reqwest = { version = "0.12.4", features = ["json", "stream", "cookies"] }
 tokio = { version = "1", features = ["full"] }
 histogram = "0.10.0"
 anyhow = "1.0"
@@ -26,6 +26,7 @@ os_info= "3.7.0"
 futures = "0.3.30"
 handlebars = "5.1.2"
 rand = "0.8.5"
+url = "2.5.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winbase"] }
