--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "atomic-bomb-engine"
-version = "0.39.0-rc.1"
+version = "0.39.0"
 edition = "2021"
 description = "A high performance torture testing engine"
 license = "MIT"
